--- a/css/style.css
+++ b/css/style.css
@@ -62,18 +62,30 @@
 }
 
 
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 
 
 body{
     font-family: 'Roboto', sans-serif;
+    
+    
 }
-
+.hero {
+       
+        background-image: url(../img/bg.jpg);
+        background-size: cover;
+        width: 100%;
+        
+}
+    
 
 /* header */
 
@@ -122,12 +134,17 @@ body{
 .navbar .shoping:hover {
 color: #290c0e;}
 
+/* NAV BAR SANDIWCH */
+
+
+
+
 /* MAIN */
 
 .hero {
     height: 80vh;
     
-    background-image: url(../img/bg.jpg);
+    background-color: black;
     background-size: cover;
     max-width: 100%;
     display: grid;
@@ -140,6 +157,12 @@ color: #290c0e;}
     grid-row: 7 / 7;
     color: #f9f1ee;
     text-shadow:  1px 2px 5px #290c0e;
+
+}
+
+.hero a {
+    text-decoration: none;
+    color: white;
 }
 
 .hero h1 {
@@ -167,7 +190,7 @@ color: #290c0e;}
     background-color: #290c0e;
 }
 
-/*footer*/
+/*footer
 
 footer {
     height: 80px;
@@ -183,4 +206,240 @@ footer a {
     color: #f9f1ee;
     margin-top: 30px;
     
+}
+
+*/
+
+
+
+footer{
+    
+    background-color: white;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding:3px;
+    margin: 5px;
+}
+
+
+
+
+
+
+
+footer a{
+    display: flex;
+    padding: 10px;
+   margin: 20px;
+   margin-top: 5px;
+   color: black;
+    text-decoration: none;
+    
+}
+
+footer form button{
+    border-bottom: 0ch;
+    background: none;
+    color: black;
+    text-decoration: none;
+    border: none;
+    outline:none;
+    padding: 10px;
+}
+
+footer form button:hover {
+    color: rgb(230, 31, 31);
+    
+}
+
+footer a:hover {
+    color: rgb(230, 31, 31);
+    
+}
+
+.emailanddres{
+
+    bottom: 0%;
+    border-radius: 0;
+    border: none;
+    background-color: none;
+    outline: 0;
+    padding: 5px;
+    color: black;
+}
+
+
+/**/
+
+
+/*UPDATES*/
+
+.contenedordeimg{
+    width: 70%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /*grid-template-rows: 400px 400px 400px;*/
+    grid-auto-rows: 1fr;
+    grid-gap: 10px 10px;
+}
+
+.griditem {
+    height: 380px;
+
+}
+
+img {
+    padding: 8px;
+    width: 100%;
+    height: 100%;
+    
+}
+
+h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+
+@media all and (max-width: 1000px){
+    .contenedordeimg)
+    {grid-template-columns: 1fr 1fr; }
+}
+@media all and (max-width: 700px){
+    .contenedordeimg)
+    {grid-template-columns :1fr;}
+}
+
+
+
+
+
+.contacbody {
+    
+   
+    line-height: 1.6;
+    
+    padding: 0 1.5em;
+}
+
+.container {
+    max-width: 1170px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.5em;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.logo {
+    text-align: center;
+    font-size: 3em;
+}
+
+.logo span {
+    color: white;
+}
+
+
+
+.contact-wrapper > * {
+    padding: 1em;
+}
+
+.contact-form {
+    background: white;
+}
+
+.contact-form form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form label {
+    display: block;
+}
+
+.contact-form form p {
+    margin: 0;
+    padding: 1em;
+}
+
+.contact-form form .block {
+    grid-column: 1 / 3;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+    width: 100%;
+    padding: .7em;
+    border: none;
+    background: none;
+    outline: 0;
+    color: black;
+    border-bottom: 1px solid black;
+}
+
+.contact-form form button {
+    background: black;
+    border: 0;
+    text-transform: uppercase;
+    padding: 1em;
+}
+
+.contact-form form button:hover,
+.contact-form form button:focus {
+    background: white;
+    color: black;
+    transition: background-color 1s ease-out;
+    outline: 0;
+}
+
+/* CONTACT INFO */
+.contact-info {
+    background: black;
+    color: white;
+}
+
+.contact-info h4, .contact-info ul, .contact-info p .contact-info a{
+    text-align: center;
+    margin: 0 0 1rem 0;
+    padding: 10px;
+    
+}
+
+.contact-info ul li i {
+    padding-right:10px ;
+}
+
+
+
+.contact-info  ul a {
+    text-decoration: none;
+    color: white;
+
+}
+
+/* LARGE SIZE */
+@media(min-width: 700px) {
+    body {
+        padding: 0 4em;
+    }
+    .contact-wrapper {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+    }
+    .contact-wrapper > * {
+        padding: 2em;
+    }
+    .contact-info h4,
+    .contact-info ul,
+    .contact-info p {
+        text-align: left;
+    }
 }
