--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
         grid-template-rows: repeat(8, 1fr);
     }
 
-
+  
 
 }
 
@@ -275,7 +275,53 @@ footer a:hover {
 
 /*UPDATES*/
 
+.contenedordeimg figure {
+    position: relative;
+    height: 350px;
+    width: 350px; 
+    overflow: hidden;
+    border-radius: 6px;
+    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    cursor: pointer;
+}
+
+
+.contenedordeimg figure .capa {
+    position:absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 103, 123, 0.27);
+    opacity: 0;
+    visibility: hidden;
+    text-align: center;
+}
+
+.contenedordeimg figure .capa h3 {
+    color: white;
+    font-weight: 400px;
+    margin-bottom: 120px;
+    transition: all 500ms ease-out;
+    margin-top: 30px;
+}
+
+.contenedordeimg figure:hover > .capa{
+    opacity: 1;
+    visibility: visible;
+
+
+}
+.contenedordeimg figure:hover > .capa h3 {
+    margin-top: 70px;
+    margin-bottom: 15px;
+}
+
+.contenedordeimg figure img {
+    transition: all 500ms ease-out;
+}
+
 .contenedordeimg{
+    
     width: 70%;
     margin: 0 auto;
     display: grid;
@@ -283,10 +329,12 @@ footer a:hover {
     /*grid-template-rows: 400px 400px 400px;*/
     grid-auto-rows: 1fr;
     grid-gap: 10px 10px;
+    
 }
 
 .griditem {
-    height: 380px;
+    height: 350px;
+    width: 350px;
 
 }
 
@@ -303,13 +351,14 @@ h1 {
 }
 
 
-@media all and (max-width: 1000px){
-    .contenedordeimg)
-    {grid-template-columns: 1fr 1fr; }
-}
-@media all and (max-width: 700px){
-    .contenedordeimg)
+@media all and (max-width: 600px){
+    .contenedordeimg
     {grid-template-columns :1fr;}
+    .griditem {
+        height: 350px;
+        width: 350px;
+    }
+
 }
 
 
