--- a/css/style.css
+++ b/css/style.css
@@ -280,8 +280,8 @@ footer a:hover {
     height: 350px;
     width: 350px; 
     overflow: hidden;
-    border-radius: 6px;
-    box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.50);
+    border-radius: 2px;
+    
     cursor: pointer;
 }
 
@@ -290,24 +290,43 @@ footer a:hover {
     position:absolute;
     top: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 103, 123, 0.27);
+    height: 100%; 
     opacity: 0;
     visibility: hidden;
     text-align: center;
+    backdrop-filter: blur(2px);
+    transition: all 1s ease-out;
+    filter: saturate(0%);
+    
+
 }
+
+
 
 .contenedordeimg figure .capa h3 {
     color: white;
     font-weight: 400px;
-    margin-bottom: 120px;
-    transition: all 500ms ease-out;
+    margin-bottom: 350px;
+    transition: all 2s ease-out;
     margin-top: 30px;
+}
+
+.contenedordeimg figure .capa p {
+    color: white;
+    font-size: 15px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 220px;
+    margin-top: 125px;
+    margin-left: 60px;
+    
 }
 
 .contenedordeimg figure:hover > .capa{
     opacity: 1;
     visibility: visible;
+    
+
 
 
 }
@@ -317,7 +336,7 @@ footer a:hover {
 }
 
 .contenedordeimg figure img {
-    transition: all 500ms ease-out;
+    transition: all 2s ease-out;
 }
 
 .contenedordeimg{
@@ -362,7 +381,86 @@ h1 {
 }
 
 
+/* REMERAS */
 
+
+.contenedorshirt figure {
+    position: relative;
+    height: 350px;
+    width: 350px; 
+    overflow: hidden;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+
+.contenedorshirt figure .capa2 {
+
+    position:absolute;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    opacity: 0;
+    visibility: inherit;
+    text-align: center;
+    transition: all 1s ease-out;
+
+}
+
+
+.contenedorshirt figure:hover > .capa2{
+    opacity: 1;
+   
+
+
+
+}
+
+
+.contenedorshirt figure img {
+    transition: all 2s ease-out;
+}
+
+.contenedorshirt{
+    
+    width: 70%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /*grid-template-rows: 400px 400px 400px;*/
+    grid-auto-rows: 1fr;
+    grid-gap: 10px 10px;
+    
+}
+
+.griditem {
+    height: 350px;
+    width: 350px;
+
+}
+
+img {
+    padding: 8px;
+    width: 100%;
+    height: 100%;
+    
+}
+
+h1 {
+    text-align: center;
+    padding: 10px;
+}
+
+
+@media all and (max-width: 600px){
+    .contenedorshirt
+    {grid-template-columns :1fr;}
+    .griditem {
+        height: 350px;
+        width: 350px;
+    }
+
+}
 
 
 .contacbody {
@@ -430,7 +528,7 @@ ul {
     border: none;
     background: none;
     outline: 0;
-    color: black;
+    color: white;
     border-bottom: 1px solid black;
 }
 
